finished day 6 exercise

--- a/Day 6/index.html
+++ b/Day 6/index.html
@@ -22,26 +22,38 @@
     // 1. create cities array
     const cities = [];
     // 2. fetch the cities
-    // const searchCities = (input) => {
     fetch(endpoint)
       .then(response => response.json())
       .then((data) => {
         // 3. push the cities into the array
-        data.forEach((element) => cities.push(element.city))
+        data.forEach((element) => cities.push(element))
+
       });
+
     const form = document.querySelector('.search-form')
-
     form.addEventListener('keyup', (event) => {
-      event.preventDefault()
+      // find
       const input = event.currentTarget.querySelector('.search');
-      const filtered_cities = cities.filter(city => city.match(input.value));
-      const suggestions = event.currentTarget.querySelector('.suggestions');
-      filtered_cities.forEach((city) => suggestions.insertAdjacentHTML('beforeend', `<li>${city}</li>`))
-      //suggestions.insertAdjacentHTML('beforeend', `<li>${city}</li>`))
+      const regex = new RegExp(input.value, 'gi');
+      const filtered_cities = cities.filter(place => place.city.match(regex) || place.state.match(regex));
 
+      // display
+      const suggestions = event.currentTarget.querySelector('.suggestions');
+      const html = filtered_cities.map(place => {
+        const cityName = place.city.replace(regex, `<span class="hl">${input.value}</span>`);
+        const stateName = place.state.replace(regex, `<span class="hl">${input.value}</span>`);
+        // search bar: new
+        // results: <li> <span class= name> <span class=hl>new</span> york, <span class=hl>new</span> york </span>
+        return `
+        <li>
+        <span class="name">${cityName}, ${stateName}</span>
+        </li>
+        `;
+      }).join('');
+      suggestions.innerHTML = html;
     })
 
-// }
+
 
 // 4. select the search bar with query selector
 // 5. addEventListener to search bar
